# ryaml

./: .gitignore  Makefile  README.md  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py  tests.py
.github/: dependabot.yml
benchmark/: data.yaml  run.py
extension/: Cargo.toml  Makefile
extension/src/: lib.rs
extensions/: Cargo.toml
extensions/src/: dump.rs  lib.rs  load.rs
tests/: dump_test.py  load_test.py
