[package]
name = "ryaml"
version = "0.1.0"
authors = ["Daniele Esposti <daniele.esposti@corp.badoo.com>"]

[lib]
name = "ryaml"
crate-type = ["dylib"]

[dependencies]
interpolate_idents = "^0.1"
yaml-rust = "^0.3"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python27-sys"]
