[package]
name = "ryaml"
version = "0.1.0"
authors = ["Daniele Esposti <daniele.esposti@badoo.com>"]

[lib]
name = "ryaml"
crate-type = ["dylib"]

[dependencies]
interpolate_idents = "^0.2"
yaml-rust = "^0.4"
linked-hash-map = "^0.5"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
# Uncomment the next two lines if you want to compile the extension for Python 2.x
default-features = false
features = ["python27-sys"]
